classDiagram
    %% Esquema de Colores
    class Usuario {
        <<PostgreSQL>> id: serial PK
        username: varchar(50)
        email: varchar(100)
        password: varchar(255)
        bio: text
        profile_picture_url: varchar(255)
        created_at: timestamp
        updated_at: timestamp
    }

    class Post {
        <<PostgreSQL>> id: serial PK
        user_id: int FK
        content: text
        created_at: timestamp
        updated_at: timestamp
        search_vector: tsvector
    }

    class Place {
        <<PostgreSQL>> id: serial PK
        name: varchar(100)
        description: text
        city: varchar(100)
        country: varchar(100)
        created_at: timestamp
        updated_at: timestamp
        search_vector: tsvector
    }

    class TravelList {
        <<PostgreSQL>> id: serial PK
        user_id: int FK
        name: varchar(100)
        description: text
        created_at: timestamp
        updated_at: timestamp
        search_vector: tsvector
    }

    class TravelListPlace {
        <<PostgreSQL>> id: serial PK
        travel_list_id: int FK
        place_id: int FK
    }

    class TravelListFollower {
        <<PostgreSQL>> id: serial PK
        travel_list_id: int FK
        user_id: int FK
    }

    class Comment {
        <<PostgreSQL>> id: serial PK
        user_id: int FK
        content: text
        created_at: timestamp
        updated_at: timestamp
        post_id: int FK
        place_id: int FK
    }

    class Like {
        <<PostgreSQL>> id: serial PK
        user_id: int FK
        created_at: timestamp
        post_id: int FK
        place_id: int FK
    }

    class Reaction {
        <<PostgreSQL>> id: serial PK
        user_id: int FK
        post_id: int FK
        reaction_type: varchar(20)
        created_at: timestamp
    }

    class PostMediaLink {
        <<PostgreSQL>> id: serial PK
        post_id: int FK
        media_url: varchar(255)
        media_type: varchar(50)
    }

    class PlaceImageLink {
        <<PostgreSQL>> id: serial PK
        place_id: int FK
        image_url: varchar(255)
    }

    class TravelDetails {
        <<MongoDB>> _id: ObjectId
        user_id: int
        title: string
        description: string
        places: array
        start_date: date
        end_date: date
        budget: object
        expenses: array
        itinerary: array
        tips: array
        photos: array
        created_at: date
    }

    class UserStats {
        <<MongoDB>> _id: ObjectId
        user_id: int
        total_posts: int
        total_likes_received: int
        total_comments_received: int
        places_visited: array
        countries_visited: array
        created_at: date
        last_updated: date
    }

    class ActivityLogs {
        <<MongoDB>> _id: ObjectId
        user_id: int
        activity_type: string
        details: object
        timestamp: date
    }

    class PlaceReview {
        <<MongoDB>> _id: ObjectId
        place_id: int
        user_id: int
        rating: int
        detailed_text: string
        visit_date: date
        recommendations: array
        tips: array
        photos: array
        price_level: int
        created_at: date
    }

    class MediaLinks {
        <<MongoDB>> _id: ObjectId
        reference_id: int
        reference_type: string
        links: array
        created_at: date
    }

    class RedisCache {
        <<Redis>> session:userId: object
        post:postId: object
        popular_posts: array
        comments:postId: array
        rate_limit:userId:action: number
    }

    %% Relaciones
    Usuario "1" -- "*" Post: crea
    Usuario "1" -- "*" TravelList: crea
    Usuario "1" -- "*" TravelDetails: registra
    Usuario "1" -- "*" Comment: escribe
    Usuario "1" -- "*" Like: da
    Usuario "1" -- "*" Reaction: reacciona

    Post "1" -- "*" PostMediaLink: tiene
    Post "1" -- "*" Comment: recibe
    Post "1" -- "*" Like: recibe
    Post "1" -- "*" Reaction: recibe

    TravelList "*" -- "*" Place: contiene
    TravelList "1" -- "*" TravelListPlace: asocia
    TravelList "1" -- "*" TravelListFollower: sigue

    Place "1" -- "*" Comment: recibe
    Place "1" -- "*" Like: recibe
    Place "1" -- "*" PlaceImageLink: tiene

    TravelDetails "1" -- "*" PlaceReview: contiene
    TravelDetails "1" -- "*" MediaLinks: asocia

    RedisCache "1" -- "*" Post: cachea
    RedisCache "1" -- "*" Comment: cachea
